--- a/styles/index.css
+++ b/styles/index.css
@@ -3,14 +3,18 @@
     padding: 0
 }
 
+body {
+    background-image: url(../images/fundo.png);
+    background-size: cover;
+}
+
 #container {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-image: url(../images/fundo.png);
-    background-size: cover;
+    background-color: rgba(255, 255, 255, 0.1);
     height: 100vh;
 }
 
@@ -19,6 +23,7 @@
     width: 200px;
     background-image: url(../images/forca0.png);
     background-size: cover;
+    transition: 500ms;
 }
 
 #keyword {
@@ -45,6 +50,7 @@
 }
 
 #keyboard .btKey {
+    text-align: center;
     margin: 4px;
     font-size: 18pt;
     color: rgb(0, 0, 0);
@@ -52,10 +58,19 @@
     width: 40px;
     border: none;
     border-radius: 4px 4px 4px 4px;
+    box-shadow: 0px 2px 0px 0px #aaaaaa;
     background-color: white;
+    cursor: pointer;
 }
 
 #keyboard .btKey:hover {
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.685);
+    position: relative;
+    box-shadow: none;
+    font-size: 16pt;
+    box-shadow: none;
+    top: 2px;
+}
+
+#keyboard .btKey:active {
+    top: 4px;
 }
