--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ body {
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    width: 100%;
 }
 
 #image {
@@ -26,7 +27,6 @@ body {
 }
 
 #keyword {
-    position: relative;
     display: flex;
     overflow-wrap: anywhere;
     font-size: 300%;
@@ -34,7 +34,9 @@ body {
     font-weight: bolder;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 15px;
+    height: 20vh;
     flex-wrap: wrap;
+    text-align: center;
     align-items: center;
     justify-content: center;
 }
@@ -47,11 +49,10 @@ body {
     align-content: center;
     justify-content: center;
     align-items: center;
-    height: 150px;
-    width: 500px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 8px 8px 8px 8px;
+    width: 40%;
+
+    padding: 5px 20px 5px 20px;
+    border-radius: 8px 8px 8px 8px
 }
 
 #keyboard .btKey {
@@ -78,4 +79,17 @@ body {
 
 #keyboard .btKey:active {
     top: 4px;
+}
+
+@media (max-width: 600px) {
+    #keyword {
+        text-align: center;
+        height: auto;
+    }
+
+    #keyboard {
+        height: auto;
+        width: 100%;
+        padding: 20px 0 20px 0;
+    }
 }
