--- a/styles/index.css
+++ b/styles/index.css
@@ -33,7 +33,6 @@ body {
     color: white;
     font-weight: bolder;
     font-family: sans-serif, Arial, Helvetica;
-    letter-spacing: 8px;
     height: 20vh;
     flex-wrap: wrap;
     text-align: center;
@@ -87,6 +86,54 @@ body {
     color: white;
     font-style: italic;
     font-family: sans-serif, Arial, Helvetica;
+}
+
+#endGame {
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+#endGame div{
+    height: 40%;
+    width: 40%;
+    background-color: white;
+    border-radius: 4px 4px 4px 4px;
+    font-family: sans-serif, Arial, Helvetica;
+    display: none;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+#endGame div span {
+    font-size: 120%;
+}
+
+#endGame div button {
+    font-size: 12pt;
+    color: white;
+    height: 50px;
+    width: 40%;
+    border: none;
+    border-radius: 4px 4px 4px 4px;
+    box-shadow: 2px 3px 0px 0px #67747a;
+    background-color: #2d3336;
+    cursor: pointer;
+    font-family: sans-serif, Arial, Helvetica;
+}
+
+#endGame div button:active {
+    position: relative;
+    box-shadow: none;
+    box-shadow: none;
+    top: 1px;
+    left: 1px;
 }
 
 @media (max-width: 600px) {
