--- a/styles/index.css
+++ b/styles/index.css
@@ -98,7 +98,7 @@ body {
     justify-content: center;
 }
 
-#endGame div{
+#endGame div {
     height: 40%;
     width: 40%;
     background-color: white;
@@ -146,5 +146,35 @@ body {
         height: auto;
         width: 100%;
         padding: 20px 0 20px 0;
+    }
+
+    #endGame div {
+        height: 30%;
+        width: 80%;
+    }
+
+    #endGame div span {
+        font-size: 110%;
+    }
+
+    #endGame div button {
+        font-size: 12pt;
+        color: white;
+        height: 50px;
+        width: 40%;
+        border: none;
+        border-radius: 4px 4px 4px 4px;
+        box-shadow: 2px 3px 0px 0px #67747a;
+        background-color: #2d3336;
+        cursor: pointer;
+        font-family: sans-serif, Arial, Helvetica;
+    }
+
+    #endGame div button:active {
+        position: relative;
+        box-shadow: none;
+        box-shadow: none;
+        top: 1px;
+        left: 1px;
     }
 }
